--- a/src/docs-table-of-contents.scss
+++ b/src/docs-table-of-contents.scss
@@ -1,6 +1,7 @@
 :host {
   display: block;
   color: var(--md-sys-color-on-surface-variant, #49454f);
+  background: var(--mnw-docs-table-of-contents-container-color, transparent);
   font-family: 'Google Sans Flex', system-ui, sans-serif;
 }
 
